--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -64,8 +64,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 
-  <!-- خط Amiri مدمج Base64 -->
-  <script src="https://cdn.jsdelivr.net/gh/LaithObidat85/fonts/amiri.js"></script>
+  <!-- خط Amiri مدمج Base64 (من مستودعك) -->
+  <script src="https://cdn.jsdelivr.net/gh/LaithObidat85/video-dashboard/public/fonts/amiri.js"></script>
 
   <script>
     async function loadFilters() {
