--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -11,19 +11,28 @@
     th { background-color: #0d6efd; color: #fff; }
     .filters { margin-bottom: 20px; }
     .export-buttons { margin: 20px 0; }
+    #completionRateContainer {
+      display: none;
+      text-align: center;
+      font-weight: bold;
+      margin: 15px 0;
+      font-size: 18px;
+      color: #0d6efd;
+    }
 
-    /* ✅ عند الطباعة فقط يظهر الجدول */
+    /* ✅ الطباعة */
     @media print {
-      body * {
-        visibility: hidden;
-      }
-      #evaluationsTableWrapper, #evaluationsTableWrapper * {
+      body * { visibility: hidden; }
+      #printHeader, #evaluationsTableWrapper, #evaluationsTableWrapper * {
         visibility: visible;
+      }
+      #printHeader {
+        text-align: center;
+        margin-bottom: 15px;
       }
       #evaluationsTableWrapper {
         position: absolute;
-        left: 0;
-        top: 0;
+        left: 0; top: 100px;
         width: 100%;
       }
     }
@@ -56,6 +65,12 @@
       <button class="btn btn-secondary" onclick="printTable()">🖨️ طباعة</button>
     </div>
 
+    <!-- نسبة الاكتمال -->
+    <div id="completionRateContainer"></div>
+
+    <!-- هيدر للطباعة -->
+    <div id="printHeader" style="display:none;"></div>
+
     <!-- الجدول -->
     <table class="table table-bordered table-striped" id="evaluationsTableWrapper">
       <thead>
@@ -81,13 +96,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 
-  <!-- خط Amiri مدمج Base64 (من مستودعك) -->
+  <!-- خط Amiri -->
   <script src="https://cdn.jsdelivr.net/gh/LaithObidat85/video-dashboard/public/fonts/amiri.js"></script>
 
   <script>
+    let lastCompletionRate = null;
+    let lastCollegeName = "جميع الكليات";
+
     async function loadFilters() {
       try {
-        // جلب الكليات
         const colleges = await axios.get('/api/colleges');
         const collegeSelect = document.getElementById('collegeFilter');
         colleges.data.forEach(c => {
@@ -97,7 +114,6 @@
           collegeSelect.appendChild(opt);
         });
 
-        // جلب المدققين
         const auditors = await axios.get('/api/auditors');
         const auditorSelect = document.getElementById('auditorFilter');
         auditors.data.forEach(a => {
@@ -115,6 +131,7 @@
       try {
         const college = document.getElementById('collegeFilter').value;
         const auditor = document.getElementById('auditorFilter').value;
+        lastCollegeName = college || "جميع الكليات";
 
         let url = '/api/committees';
         const params = [];
@@ -128,10 +145,15 @@
 
         if (res.data.length === 0) {
           tbody.innerHTML = `<tr><td colspan="7" class="text-center">لا توجد تقييمات</td></tr>`;
+          document.getElementById("completionRateContainer").style.display = "none";
+          lastCompletionRate = null;
           return;
         }
 
+        let totalAvailability = 0;
+
         res.data.forEach((ev, index) => {
+          totalAvailability += ev.availability_score ?? 0;
           const tr = document.createElement('tr');
           tr.innerHTML = `
             <td>${index + 1}</td>
@@ -144,6 +166,15 @@
           `;
           tbody.appendChild(tr);
         });
+
+        const completionDiv = document.getElementById("completionRateContainer");
+        const numCommittees = res.data.length;
+        const denominator = numCommittees * 9;
+        const completionRate = ((totalAvailability / denominator) * 100).toFixed(2);
+        completionDiv.innerHTML = `📌 نسبة الاكتمال = ${completionRate}%`;
+        completionDiv.style.display = college ? "block" : "none";
+        lastCompletionRate = completionRate;
+
       } catch (err) {
         console.error("خطأ في جلب التقييمات:", err);
       }
@@ -153,6 +184,16 @@
     function exportToExcel() {
       const table = document.getElementById("evaluationsTableWrapper");
       const wb = XLSX.utils.table_to_book(table, { sheet: "التقييمات" });
+      const ws = wb.Sheets["التقييمات"];
+
+      if (lastCollegeName) {
+        XLSX.utils.sheet_add_aoa(ws, [
+          [`نتائج تقييم اللجان - ${lastCollegeName}`],
+          [lastCompletionRate ? `📌 نسبة الاكتمال = ${lastCompletionRate}%` : ""],
+          []
+        ], { origin: "A1" });
+      }
+
       XLSX.writeFile(wb, "التقييمات.xlsx", { bookType: "xlsx", bookSST: true });
     }
 
@@ -161,18 +202,17 @@
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({ orientation: 'landscape' });
 
-      // إضافة الخط العربي
       doc.addFileToVFS("Amiri-Regular.ttf", amiriBase64);
       doc.addFont("Amiri-Regular.ttf", "Amiri", "normal");
       doc.setFont("Amiri");
 
-      doc.text("📊 تقرير التقييمات", 140, 20, { align: "center" });
+      doc.text(`📊 نتائج تقييم اللجان - ${lastCollegeName}`, 140, 20, { align: "center" });
+      if (lastCompletionRate) {
+        doc.text(`📌 نسبة الاكتمال = ${lastCompletionRate}%`, 140, 30, { align: "center" });
+      }
 
-      // استخراج الأعمدة والبيانات بنفس ترتيب RTL
       const headers = [];
-      document.querySelectorAll("#evaluationsTableWrapper thead tr th").forEach(th => {
-        headers.push(th.innerText);
-      });
+      document.querySelectorAll("#evaluationsTableWrapper thead tr th").forEach(th => headers.push(th.innerText));
 
       const data = [];
       document.querySelectorAll("#evaluationsTableWrapper tbody tr").forEach(tr => {
@@ -181,14 +221,13 @@
         data.push(row);
       });
 
-      // عكس ترتيب الأعمدة للـ RTL
       const rtlHeaders = headers.reverse();
       const rtlData = data.map(r => r.reverse());
 
       doc.autoTable({
         head: [rtlHeaders],
         body: rtlData,
-        startY: 30,
+        startY: lastCompletionRate ? 40 : 30,
         styles: { font: "Amiri", fontStyle: "normal", halign: "right" },
         headStyles: { fillColor: [13, 110, 253] }
       });
@@ -196,15 +235,17 @@
       doc.save("التقييمات.pdf");
     }
 
-    // 🔹 Print (الجدول فقط)
+    // 🔹 Print (جدول + عنوان + نسبة اكتمال)
     function printTable() {
+      const headerDiv = document.getElementById("printHeader");
+      headerDiv.style.display = "block";
+      headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
+                            (lastCompletionRate ? `<p>📌 نسبة الاكتمال = ${lastCompletionRate}%</p>` : "");
       window.print();
+      headerDiv.style.display = "none";
     }
 
-    // تحميل الفلاتر والتقييمات عند فتح الصفحة
     loadFilters().then(loadEvaluations);
-
-    // إعادة تحميل عند تغيير الفلاتر
     document.getElementById('collegeFilter').addEventListener('change', loadEvaluations);
     document.getElementById('auditorFilter').addEventListener('change', loadEvaluations);
   </script>
