--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -38,7 +38,7 @@
       #evaluationsTableWrapper {
         position: absolute;
         left: 0; 
-        top: 120px; /* الجدول يبدأ بعد الهيدر */
+        top: 150px; /* الجدول يبدأ بعد الهيدر */
         width: 100%;
       }
     }
@@ -100,6 +100,7 @@
   <script>
     let lastCompletionRate = null;
     let lastCollegeName = "جميع الكليات";
+    let lastCommitteesCount = 0;
 
     async function loadFilters() {
       try {
@@ -145,6 +146,7 @@
           tbody.innerHTML = `<tr><td colspan="7" class="text-center">لا توجد تقييمات</td></tr>`;
           document.getElementById("completionRateContainer").style.display = "none";
           lastCompletionRate = null;
+          lastCommitteesCount = 0;
           return;
         }
 
@@ -166,9 +168,16 @@
 
         const completionDiv = document.getElementById("completionRateContainer");
         const numCommittees = res.data.length;
+        lastCommitteesCount = numCommittees;
         const denominator = numCommittees * 9;
         const completionRate = ((totalAvailability / denominator) * 100).toFixed(2);
-        completionDiv.innerHTML = `📌 نسبة الاكتمال = ${completionRate}%`;
+
+        let html = `📌 نسبة الاكتمال = ${completionRate}%`;
+        if (college) {
+          html += `<br>📋 عدد لجان كلية ${college} = ${numCommittees}`;
+        }
+
+        completionDiv.innerHTML = html;
         completionDiv.style.display = "block";
         lastCompletionRate = completionRate;
 
@@ -177,11 +186,12 @@
       }
     }
 
-    // 🔹 Print (عنوان + نسبة اكتمال + الجدول)
+    // 🔹 Print (عنوان + نسبة اكتمال + عدد اللجان)
     function printTable() {
       const headerDiv = document.getElementById("printHeader");
       headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
-                            (lastCompletionRate ? `<p>📌 نسبة الاكتمال = ${lastCompletionRate}%</p>` : "");
+                            (lastCompletionRate ? `<p>📌 نسبة الاكتمال = ${lastCompletionRate}%</p>` : "") +
+                            (lastCollegeName !== "جميع الكليات" ? `<p>📋 عدد لجان كلية ${lastCollegeName} = ${lastCommitteesCount}</p>` : "");
       window.print();
     }
 
