--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -12,7 +12,6 @@
     .filters { margin-bottom: 20px; }
     .export-buttons { margin: 20px 0; }
     #completionRateContainer {
-      display: none;
       text-align: center;
       font-weight: bold;
       margin: 15px 0;
@@ -44,7 +43,6 @@
       }
     }
 
-    /* مخفي افتراضياً في الصفحة */
     #printHeader {
       display: none;
     }
@@ -75,10 +73,10 @@
       <button class="btn btn-secondary" onclick="printTable()">🖨️ طباعة</button>
     </div>
 
-    <!-- نسبة الاكتمال (تظهر فقط في الصفحة) -->
+    <!-- نسبة الاكتمال -->
     <div id="completionRateContainer"></div>
 
-    <!-- هيدر للطباعة (مخفي في الصفحة) -->
+    <!-- هيدر للطباعة -->
     <div id="printHeader"></div>
 
     <!-- الجدول -->
@@ -150,11 +148,14 @@
 
         if (res.data.length === 0) {
           tbody.innerHTML = `<tr><td colspan="7" class="text-center">لا توجد تقييمات</td></tr>`;
-          document.getElementById("completionRateContainer").style.display = "none";
+          document.getElementById("completionRateContainer").innerHTML = "";
           lastCompletionRate = null;
           lastCommitteesCount = 0;
           return;
         }
+
+        // ترتيب اللجان حسب الكلية
+        res.data.sort((a, b) => (a.college || "").localeCompare(b.college || "", "ar"));
 
         let totalAvailability = 0;
         res.data.forEach((ev, index) => {
@@ -178,13 +179,14 @@
         const denominator = numCommittees * 9;
         const completionRate = ((totalAvailability / denominator) * 100).toFixed(2);
 
-        let html = `📌 نسبة الاكتمال = ${completionRate}%`;
         if (college) {
-          html += `<br>📋 عدد لجان كلية ${college} = ${numCommittees}`;
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لكلية ${college} = ${completionRate}%<br>
+                                     📋 عدد لجان كلية ${college} = ${numCommittees}`;
+        } else {
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
+                                     📋 عدد لجان جميع الكليات = ${numCommittees}`;
         }
 
-        completionDiv.innerHTML = html;
-        completionDiv.style.display = "block";
         lastCompletionRate = completionRate;
 
       } catch (err) {
@@ -195,11 +197,17 @@
     // 🔹 Print (عنوان + نسبة اكتمال + عدد اللجان)
     function printTable() {
       const headerDiv = document.getElementById("printHeader");
-      headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
-                            (lastCompletionRate ? `<p>📌 نسبة الاكتمال = ${lastCompletionRate}%</p>` : "") +
-                            (lastCollegeName !== "جميع الكليات" ? `<p>📋 عدد لجان كلية ${lastCollegeName} = ${lastCommitteesCount}</p>` : "");
+      if (lastCollegeName === "جميع الكليات") {
+        headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - جميع الكليات</h4>` +
+                              (lastCompletionRate ? `<p>📌 نسبة الاكتمال لجميع الكليات = ${lastCompletionRate}%</p>` : "") +
+                              `<p>📋 عدد لجان جميع الكليات = ${lastCommitteesCount}</p>`;
+      } else {
+        headerDiv.innerHTML = `<h4>📊 نتائج تقييم اللجان - ${lastCollegeName}</h4>` +
+                              (lastCompletionRate ? `<p>📌 نسبة الاكتمال لكلية ${lastCollegeName} = ${lastCompletionRate}%</p>` : "") +
+                              `<p>📋 عدد لجان كلية ${lastCollegeName} = ${lastCommitteesCount}</p>`;
+      }
       window.print();
-      headerDiv.innerHTML = ""; // يرجع فاضي بعد الطباعة
+      headerDiv.innerHTML = "";
     }
 
     loadFilters().then(loadEvaluations);
