--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -11,29 +11,14 @@
     table { background: #fff; border-radius: 10px; overflow: hidden; font-size: 14px; }
     th { background-color: #0d6efd; color: #fff; text-align: center; }
     td { text-align: center; vertical-align: middle; }
+    td[contenteditable="true"] { background: #fefae0; cursor: text; }
+    .highlight { background-color: #d4edda !important; transition: background-color 1s ease; }
     .toast-container { position: fixed; top: 20px; left: 20px; z-index: 2000; }
-    .filters { margin-bottom: 20px; }
   </style>
 </head>
 <body>
   <div class="container">
     <h3 class="text-center mb-4">⚙️ إدارة تقييم اللجان</h3>
-
-    <!-- الفلاتر -->
-    <div class="filters row">
-      <div class="col-md-6 mb-2">
-        <label class="form-label">الكلية</label>
-        <select id="collegeFilter" class="form-select">
-          <option value="">جميع الكليات</option>
-        </select>
-      </div>
-      <div class="col-md-6 mb-2">
-        <label class="form-label">اسم المدقق</label>
-        <select id="auditorFilter" class="form-select">
-          <option value="">جميع المدققين</option>
-        </select>
-      </div>
-    </div>
 
     <!-- الجدول -->
     <table class="table table-bordered table-striped table-responsive">
@@ -44,94 +29,79 @@
           <th>اسم اللجنة</th>
           <th>اسم المدقق</th>
           <th>تاريخ التدقيق</th>
-
-          <!-- ✅ الحقول التفصيلية -->
           <th>قرار التشكيل</th>
           <th>خطة العمل</th>
           <th>مؤشرات الأداء</th>
           <th>عدد الاجتماعات</th>
           <th>التوافق بين الدعوات والاجتماعات</th>
           <th>كتب التغطية</th>
-          <th>تقرير 1</th>
-          <th>تقرير 2</th>
-          <th>تقرير 3</th>
+          <th>تقرير إنجاز 1</th>
+          <th>تقرير إنجاز 2</th>
+          <th>تقرير إنجاز 3</th>
           <th>التحليل الإحصائي</th>
-
           <th>درجة التوفر</th>
+          <th>الملاحظات</th>
           <th>إجراءات</th>
         </tr>
       </thead>
       <tbody id="committeesTable">
-        <tr><td colspan="17" class="text-center">جاري التحميل...</td></tr>
+        <tr><td colspan="18" class="text-center">جاري التحميل...</td></tr>
       </tbody>
     </table>
   </div>
 
-  <!-- Modal التعديل (التوافق أصبح التوافق بين الدعوات والاجتماعات) -->
+  <!-- Modal لعرض الملاحظات -->
+  <div class="modal fade" id="notesModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">📝 الملاحظات</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body" id="notesContent"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal تعديل كامل -->
   <div class="modal fade" id="editModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <form id="editForm">
           <div class="modal-header">
-            <h5 class="modal-title">✏️ تعديل التقييم</h5>
+            <h5 class="modal-title">✏️ تعديل التقييم (كامل)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
           </div>
           <div class="modal-body">
             <input type="hidden" name="_id" id="edit_id">
             <div class="mb-3">
               <label class="form-label">الكلية</label>
-              <select class="form-select" name="college" id="editCollege" required></select>
+              <input type="text" class="form-control" id="editCollege" disabled>
             </div>
             <div class="mb-3">
               <label class="form-label">اسم اللجنة</label>
-              <input type="text" class="form-control" name="committee_name" id="editCommittee" required>
+              <input type="text" class="form-control" id="editCommittee" disabled>
             </div>
             <div class="mb-3">
               <label class="form-label">اسم المدقق</label>
-              <select class="form-select" name="auditor_name" id="editAuditor" required></select>
+              <input type="text" class="form-control" id="editAuditor" disabled>
             </div>
             <div class="mb-3">
               <label class="form-label">تاريخ التدقيق</label>
-              <input type="date" class="form-control" name="audit_date" id="editDate">
+              <input type="date" class="form-control" id="editDate">
             </div>
             <div class="mb-3">
               <label class="form-label">الملاحظات</label>
               <div id="editEditor"></div>
-              <input type="hidden" name="notes" id="editNotesInput">
-            </div>
-            <div class="row">
-              <div class="col-md-6 mb-2"><label class="form-label">قرار التشكيل</label><input type="number" step="0.25" class="form-control score" id="editFormation"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">خطة العمل</label><input type="number" step="0.25" class="form-control score" id="editWorkPlan"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">مؤشرات الأداء</label><input type="number" step="0.25" class="form-control score" id="editIndicators"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">عدد الاجتماعات</label><input type="number" step="0.25" class="form-control score" id="editMeetings"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">التوافق بين الدعوات والاجتماعات</label><input type="number" step="0.25" class="form-control score" id="editConsistency"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">كتب التغطية</label><input type="number" step="0.25" class="form-control score" id="editCoverage"></div>
-              <div class="col-md-4 mb-2"><label class="form-label">تقرير 1</label><input type="number" step="0.25" class="form-control score" id="editReport1"></div>
-              <div class="col-md-4 mb-2"><label class="form-label">تقرير 2</label><input type="number" step="0.25" class="form-control score" id="editReport2"></div>
-              <div class="col-md-4 mb-2"><label class="form-label">تقرير 3</label><input type="number" step="0.25" class="form-control score" id="editReport3"></div>
-              <div class="col-md-6 mb-2"><label class="form-label">التحليل الإحصائي</label><input type="number" step="0.25" class="form-control score" id="editAnalysis"></div>
-            </div>
-            <div class="mb-3">
-              <label class="form-label">درجة التوفر (تحسب تلقائيًا)</label>
-              <input type="number" class="form-control" id="editAvailability" readonly>
+              <input type="hidden" id="editNotesInput">
             </div>
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">💾 حفظ التعديلات</button>
+            <button type="submit" class="btn btn-primary">💾 حفظ</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
           </div>
         </form>
       </div>
-    </div>
-  </div>
-
-  <!-- Toasts -->
-  <div class="toast-container">
-    <div id="successToast" class="toast align-items-center text-bg-success border-0">
-      <div class="d-flex"><div class="toast-body">✅ العملية نجحت</div><button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button></div>
-    </div>
-    <div id="errorToast" class="toast align-items-center text-bg-danger border-0">
-      <div class="d-flex"><div class="toast-body">❌ حدث خطأ</div><button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button></div>
     </div>
   </div>
 
@@ -140,60 +110,44 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
   <script>
-    const successToast = new bootstrap.Toast(document.getElementById('successToast'));
-    const errorToast = new bootstrap.Toast(document.getElementById('errorToast'));
     const quillEdit = new Quill('#editEditor', { theme: 'snow' });
 
-    // تحميل الكليات والمدققين للفلاتر والمودال
-    async function loadOptions() {
-      const colleges = await axios.get('/api/colleges');
-      const collegeFilter = document.getElementById('collegeFilter');
-      const collegeSelect = document.getElementById('editCollege');
-      colleges.data.forEach(c => {
-        const opt1 = document.createElement('option');
-        opt1.value = c.name; opt1.textContent = c.name;
-        collegeFilter.appendChild(opt1);
-        const opt2 = document.createElement('option');
-        opt2.value = c.name; opt2.textContent = c.name;
-        collegeSelect.appendChild(opt2);
+    // 🔹 حساب درجة التوفر
+    function updateAvailability(row) {
+      let sum = 0;
+      const fields = [
+        "formation_decision","work_plan","performance_indicators",
+        "meetings","consistency","report1","report2","report3","statistical_analysis"
+      ];
+      fields.forEach(f => {
+        const cell = row.querySelector(`[data-field="${f}"]`);
+        sum += parseFloat(cell?.innerText) || 0;
       });
-      const auditors = await axios.get('/api/auditors');
-      const auditorFilter = document.getElementById('auditorFilter');
-      const auditorSelect = document.getElementById('editAuditor');
-      auditors.data.forEach(a => {
-        const opt1 = document.createElement('option');
-        opt1.value = a.name; opt1.textContent = a.name;
-        auditorFilter.appendChild(opt1);
-        const opt2 = document.createElement('option');
-        opt2.value = a.name; opt2.textContent = a.name;
-        auditorSelect.appendChild(opt2);
+      const availabilityCell = row.querySelector(".availability-cell");
+      availabilityCell.innerText = sum.toFixed(2);
+      availabilityCell.classList.add("highlight");
+      setTimeout(() => availabilityCell.classList.remove("highlight"), 1500);
+    }
+
+    // 🔹 إضافة مستمع لأي خلية قابلة للتعديل
+    function attachCellListeners(tr) {
+      tr.querySelectorAll('[contenteditable="true"]').forEach(cell => {
+        cell.addEventListener('input', () => {
+          cell.classList.add("highlight");
+          setTimeout(() => cell.classList.remove("highlight"), 1500);
+          updateAvailability(tr);
+        });
       });
     }
-    loadOptions();
 
-    // تحميل التقييمات مع تطبيق الفلترة + ترتيب حسب الكلية
+    // 🔹 تحميل التقييمات
     async function loadCommittees() {
       try {
-        const college = document.getElementById('collegeFilter').value;
-        const auditor = document.getElementById('auditorFilter').value;
-
-        let url = '/api/committees';
-        const params = [];
-        if (college) params.push(`college=${encodeURIComponent(college)}`);
-        if (auditor) params.push(`auditor_name=${encodeURIComponent(auditor)}`);
-        if (params.length > 0) url += '?' + params.join('&');
-
-        const res = await axios.get(url);
+        const res = await axios.get('/api/committees');
         const tbody = document.getElementById('committeesTable');
         tbody.innerHTML = "";
 
-        if(res.data.length === 0){
-          tbody.innerHTML = `<tr><td colspan="17" class="text-center">لا توجد بيانات</td></tr>`;
-          return;
-        }
-
-        // ✅ ترتيب النتائج حسب اسم الكلية (بالعربية)
-        res.data.sort((a, b) => (a.college || "").localeCompare(b.college || "", "ar"));
+        res.data.sort((a,b)=>(a.college||"").localeCompare(b.college||"","ar"));
 
         res.data.forEach((c, idx) => {
           const tr = document.createElement('tr');
@@ -203,37 +157,37 @@
             <td>${c.committee_name}</td>
             <td>${c.auditor_name}</td>
             <td>${c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-'}</td>
-
-            <td>${c.formation_decision ?? 0}</td>
-            <td>${c.work_plan ?? 0}</td>
-            <td>${c.performance_indicators ?? 0}</td>
-            <td>${c.meetings ?? 0}</td>
-            <td>${c.consistency ?? 0}</td>
+            <td contenteditable="true" data-field="formation_decision">${c.formation_decision ?? 0}</td>
+            <td contenteditable="true" data-field="work_plan">${c.work_plan ?? 0}</td>
+            <td contenteditable="true" data-field="performance_indicators">${c.performance_indicators ?? 0}</td>
+            <td contenteditable="true" data-field="meetings">${c.meetings ?? 0}</td>
+            <td contenteditable="true" data-field="consistency">${c.consistency ?? 0}</td>
             <td>${c.coverage_books ?? 0}</td>
-            <td>${c.report1 ?? 0}</td>
-            <td>${c.report2 ?? 0}</td>
-            <td>${c.report3 ?? 0}</td>
-            <td>${c.statistical_analysis ?? 0}</td>
-
-            <td>${c.availability_score ?? 0}</td>
+            <td contenteditable="true" data-field="report1">${c.report1 ?? 0}</td>
+            <td contenteditable="true" data-field="report2">${c.report2 ?? 0}</td>
+            <td contenteditable="true" data-field="report3">${c.report3 ?? 0}</td>
+            <td contenteditable="true" data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
+            <td class="availability-cell">${c.availability_score ?? 0}</td>
+            <td><button class="btn btn-sm btn-info" onclick="showNotes(\`${c.notes || ''}\`)">🔍 عرض</button></td>
             <td>
+              <button class="btn btn-sm btn-success" onclick="saveRow(this, '${c._id}')">💾 حفظ</button>
               <button class="btn btn-sm btn-primary" onclick='editCommittee(${JSON.stringify(c)})'>✏️</button>
               <button class="btn btn-sm btn-danger" onclick="deleteCommittee('${c._id}')">🗑️</button>
             </td>
           `;
           tbody.appendChild(tr);
+          attachCellListeners(tr);
         });
-      } catch (err) {
-        console.error(err); errorToast.show();
-      }
+      } catch (err) { console.error(err); }
     }
-    loadCommittees();
 
-    // إعادة تحميل عند تغيير الفلاتر
-    document.getElementById('collegeFilter').addEventListener('change', loadCommittees);
-    document.getElementById('auditorFilter').addEventListener('change', loadCommittees);
+    // 🔹 عرض الملاحظات
+    function showNotes(html) {
+      document.getElementById('notesContent').innerHTML = html || "<i>لا توجد ملاحظات</i>";
+      new bootstrap.Modal(document.getElementById('notesModal')).show();
+    }
 
-    // فتح التعديل
+    // 🔹 فتح المودال الكامل
     function editCommittee(c) {
       document.getElementById('edit_id').value = c._id;
       document.getElementById('editCollege').value = c.college;
@@ -241,56 +195,34 @@
       document.getElementById('editAuditor').value = c.auditor_name;
       document.getElementById('editDate').value = c.audit_date ? c.audit_date.split("T")[0] : "";
       quillEdit.root.innerHTML = c.notes || "";
-      document.getElementById('editFormation').value = c.formation_decision ?? 0;
-      document.getElementById('editWorkPlan').value = c.work_plan ?? 0;
-      document.getElementById('editIndicators').value = c.performance_indicators ?? 0;
-      document.getElementById('editMeetings').value = c.meetings ?? 0;
-      document.getElementById('editConsistency').value = c.consistency ?? 0;
-      document.getElementById('editCoverage').value = c.coverage_books ?? 0;
-      document.getElementById('editReport1').value = c.report1 ?? 0;
-      document.getElementById('editReport2').value = c.report2 ?? 0;
-      document.getElementById('editReport3').value = c.report3 ?? 0;
-      document.getElementById('editAnalysis').value = c.statistical_analysis ?? 0;
-      document.getElementById('editAvailability').value = c.availability_score ?? 0;
       new bootstrap.Modal(document.getElementById('editModal')).show();
     }
 
-    // تحديث درجة التوفر في الـ Modal
-    document.querySelectorAll('#editForm .score').forEach(inp => {
-      inp.addEventListener('input', () => {
-        let sum = 0;
-        document.querySelectorAll('#editForm .score').forEach(i => sum += parseFloat(i.value) || 0);
-        document.getElementById('editAvailability').value = sum;
+    // 🔹 حفظ من الجدول مباشرة
+    async function saveRow(btn, id) {
+      const row = btn.closest('tr');
+      const updatedData = {};
+      row.querySelectorAll('[contenteditable="true"]').forEach(cell => {
+        updatedData[cell.getAttribute('data-field')] = parseFloat(cell.innerText) || 0;
       });
-    });
-
-    // حفظ التعديلات
-    document.getElementById('editForm').addEventListener('submit', async function(e){
-      e.preventDefault();
-      document.getElementById('editNotesInput').value = quillEdit.root.innerHTML;
-      const formData = new FormData(this);
-      const data = Object.fromEntries(formData.entries());
+      updatedData.availability_score = parseFloat(row.querySelector(".availability-cell").innerText) || 0;
       try {
-        await axios.put(`/api/committees/${data._id}`, data);
-        successToast.show();
-        bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
-        loadCommittees();
-      } catch (err) {
-        console.error(err); errorToast.show();
-      }
-    });
+        await axios.put(`/api/committees/${id}`, updatedData);
+        alert("✅ تم حفظ التعديلات");
+      } catch (err) { console.error(err); alert("❌ خطأ بالحفظ"); }
+    }
 
-    // حذف
+    // 🔹 حذف
     async function deleteCommittee(id) {
       if (!confirm("هل أنت متأكد من الحذف؟")) return;
       try {
         await axios.delete(`/api/committees/${id}`);
-        successToast.show();
         loadCommittees();
-      } catch (err) {
-        console.error(err); errorToast.show();
-      }
+      } catch (err) { console.error(err); }
     }
+
+    // تشغيل أولي
+    loadCommittees();
   </script>
 </body>
 </html>
